--- a/ILF quiz.html
+++ b/ILF quiz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Impact Loan Fund Quiz</title>
+    <title>Impact Loan Fund - Pre-Qualification Quiz</title>
     <style>
         body {
             font-family: sans-serif;
@@ -24,7 +24,11 @@
             font-weight: bold;
         }
         .options div {
-            margin-bottom: 10px;
+            margin-bottom: 5px;
+        }
+        .options small {
+            font-style: italic;
+            color: #555;
         }
         button {
             padding: 10px 20px;
@@ -37,16 +41,16 @@
         button:hover {
             background-color: #0056b3;
         }
-        .result {
+        #results {
             margin-top: 20px;
-            padding: 10px;
+            padding: 15px;
             border-radius: 5px;
         }
-        .correct {
+        .pre-qualified {
             background-color: #e7f4e7;
             border: 1px solid #d0e9d0;
         }
-        .incorrect {
+        .not-qualified {
             background-color: #fce8e6;
             border: 1px solid #f8d7da;
         }
@@ -55,119 +59,111 @@
 <body>
 
     <div class="quiz-container">
-        <h1>How Much Do You Know About the Impact Loan Fund?</h1>
-        <p>Test your knowledge about the small business loans offered by the Impact Loan Fund (ILF).</p>
-        <form id="quizForm">
+        <h1>Impact Loan Fund: Pre-Qualification Form</h1>
+        <p>Answer the questions below to see if your business is a potential candidate for an Impact Loan Fund (ILF) loan.</p>
+        <form id="prequalForm">
             <div class="question">
-                <p>1. What is the primary geographic area served by the Impact Loan Fund? </p>
+                <p>1. Is your business located within the Greater Kensington area in Lower Northeast Philadelphia? </p>
                 <div class="options">
-                    <div><input type="radio" name="q1" value="a"> a) All of Philadelphia</div>
-                    <div><input type="radio" name="q1" value="b"> b) The Greater Kensington area</div>
-                    <div><input type="radio" name="q1" value="c"> c) Center City</div>
-                    <div><input type="radio" name="q1" value="d"> d) All of Pennsylvania</div>
+                    <div><input type="radio" name="location" value="yes" required> Yes</div>
+                    <div><input type="radio" name="location" value="no"> No</div>
                 </div>
             </div>
 
             <div class="question">
-                <p>2. What is the loan amount range offered by the ILF? </p>
+                <p>2. Is your business currently operating?</p>
                 <div class="options">
-                    <div><input type="radio" name="q2" value="a"> a) $5,000 to $50,000</div>
-                    <div><input type="radio" name="q2" value="b"> b) $10,000 to $100,000</div>
-                    <div><input type="radio" name="q2" value="c"> c) $25,000 to $250,000</div>
-                    <div><input type="radio" name="q2" value="d"> d) $50,000 to $500,000</div>
+                    <div><input type="radio" name="operating" value="yes" required> Yes</div>
+                    <div><input type="radio" name="operating" value="no"> No</div>
+                    <small><em>Note: ILF primarily serves existing operating businesses to invest and expand. </em></small>
                 </div>
             </div>
 
             <div class="question">
-                <p>3. True or False: The ILF primarily serves new startup businesses. </p>
+                <p>3. How much financing are you seeking? </p>
                 <div class="options">
-                    <div><input type="radio" name="q3" value="a"> a) True</div>
-                    <div><input type="radio" name="q3" value="b"> b) False</div>
+                    <div><input type="radio" name="amount" value="under" required> Less than $25,000</div>
+                    <div><input type="radio" name="amount" value="in_range"> Between $25,000 and $250,000</div>
+                    <div><input type="radio" name="amount" value="over"> More than $250,000</div>
                 </div>
             </div>
 
             <div class="question">
-                <p>4. Which of the following is NOT a listed use for loan funds? </p>
-                <div class="options">
-                    <div><input type="radio" name="q4" value="a"> a) Equipment</div>
-                    <div><input type="radio" name="q4" value="b"> b) Payroll for personal staff</div>
-                    <div><input type="radio" name="q4" value="c"> c) Building Acquisition</div>
-                    <div><input type="radio" name="q4" value="d"> d) Working Capital</div>
-                </div>
-            </div>
-
-            <div class="question">
-                <p>5. What is the maximum term for an ILF loan? </p>
-                <div class="options">
-                    <div><input type="radio" name="q5" value="a"> a) 3 years</div>
-                    <div><input type="radio" name="q5" value="b"> b) 5 years</div>
-                    <div><input type="radio" name="q5" value="c"> c) 7 years</div>
-                    <div><input type="radio" name="q5" value="d"> d) 10 years</div>
-                </div>
-            </div>
-
-             <div class="question">
-                <p>6. Which of the following is a required fee for a loan? </p>
-                <div class="options">
-                    <div><input type="radio" name="q6" value="a"> a) Application Fee</div>
-                    <div><input type="radio" name="q6" value="b"> b) Closing Fee of 1.5%</div>
-                    <div><input type="radio" name="q6" value="c"> c) Pre-payment Penalty</div>
-                    <div><input type="radio" name="q6" value="d"> d) Annual Service Fee</div>
-                </div>
-            </div>
-
-            <div class="question">
-                <p>7. True or False: Personal guarantees are required for loans. </p>
-                <div class="options">
-                    <div><input type="radio" name="q7" value="a"> a) True</div>
-                    <div><input type="radio" name="q7" value="b"> b) False</div>
+                <p>4. What is the primary purpose of the loan? (Select all that apply) </p>
+                 <div class="options">
+                    <div><input type="checkbox" name="purpose" value="expansion"> Business Expansion</div>
+                    <div><input type="checkbox" name="purpose" value="equipment"> Equipment Purchase</div>
+                    <div><input type="checkbox" name="purpose" value="improvements"> Building Improvements</div>
+                    <div><input type="checkbox" name="purpose" value="capital"> Working Capital</div>
+                    <div><input type="checkbox" name="purpose" value="acquisition"> Building Acquisition</div>
+                    <div><input type="checkbox" name="purpose" value="other"> Other</div>
                 </div>
             </div>
             
-            <button type="button" onclick="submitQuiz()">Submit Quiz</button>
+            <div class="question">
+                <p>5. Are you willing and able to provide business assets (such as equipment or real estate) as collateral and a personal guarantee for the loan? </p>
+                 <div class="options">
+                    <div><input type="radio" name="collateral" value="yes" required> Yes</div>
+                    <div><input type="radio" name="collateral" value="no"> No</div>
+                    <small><em>Note: Business assets, real estate (if available), and personal guarantees are required. </em></small>
+                </div>
+            </div>
+
+            <button type="button" onclick="checkEligibility()">Check My Eligibility</button>
         </form>
 
         <div id="results"></div>
     </div>
 
     <script>
-        function submitQuiz() {
-            const answers = {
-                q1: 'b', // The Greater Kensington area 
-                q2: 'c', // $25,000 to $250,000 
-                q3: 'b', // False, it primarily serves existing operating businesses 
-                q4: 'b', // Payroll for personal staff is not listed 
-                q5: 'c', // Up to 7 years 
-                q6: 'b', // Closing Fee: 1.5% 
-                q7: 'a'  // True, Guarantees Required 
-            };
-
-            const form = document.getElementById('quizForm');
+        function checkEligibility() {
+            const form = document.getElementById('prequalForm');
             const resultsDiv = document.getElementById('results');
             resultsDiv.innerHTML = '';
-            let score = 0;
-            const totalQuestions = Object.keys(answers).length;
+            resultsDiv.className = '';
 
-            for (const [question, correctAnswer] of Object.entries(answers)) {
-                const selected = form.elements[question].value;
-                const questionElement = form.querySelector(`input[name="${question}"]`).closest('.question');
-                const result = document.createElement('div');
-                result.classList.add('result');
+            const location = form.elements['location'].value;
+            const operating = form.elements['operating'].value;
+            const amount = form.elements['amount'].value;
+            const collateral = form.elements['collateral'].value;
 
-                if (selected === correctAnswer) {
-                    score++;
-                    result.classList.add('correct');
-                    result.innerHTML = `${question.toUpperCase()}: Correct!`;
-                } else {
-                    result.classList.add('incorrect');
-                    result.innerHTML = `${question.toUpperCase()}: Incorrect.`;
-                }
-                questionElement.appendChild(result);
+            let issues = [];
+
+            if (location !== 'yes') {
+                issues.push('The business must be located in the Greater Kensington area.');
+            }
+            if (operating !== 'yes') {
+                issues.push('The fund primarily serves existing businesses.');
+            }
+            if (amount !== 'in_range') {
+                issues.push('Loan amounts must be between $25,000 and $250,000.');
+            }
+            if (collateral !== 'yes') {
+                issues.push('The ability to provide collateral and a personal guarantee is required.');
             }
 
-            const finalScore = document.createElement('h3');
-            finalScore.innerHTML = `You scored ${score} out of ${totalQuestions}!`;
-            resultsDiv.appendChild(finalScore);
+            if (issues.length > 0) {
+                resultsDiv.classList.add('not-qualified');
+                let message = '<h3>Based on your answers, you may not be eligible at this time.</h3>';
+                message += '<ul>';
+                issues.forEach(issue => {
+                    message += `<li>${issue}</li>`;
+                });
+                message += '</ul>';
+                message += '<p>If you have questions, please contact the Impact Loan Fund directly.</p>';
+                resultsDiv.innerHTML = message;
+            } else {
+                resultsDiv.classList.add('pre-qualified');
+                let message = '<h3>Based on your answers, you may be a good candidate for this loan!</h3>';
+                message += '<p>This pre-qualification form does not guarantee a loan approval, but your business appears to meet the basic criteria.</p>';
+                message += '<p><strong>Next Steps:</strong> We encourage you to contact the Impact Loan Fund to discuss your financing needs.</p>';
+                message += '<ul>';
+                message += '<li><strong>Email:</strong> loan@impactservices.org </li>';
+                message += '<li><strong>Call:</strong> (215) 974-0900 </li>';
+                message += '<li><strong>Website:</strong> www.impactloanfund.org/contact </li>';
+                message += '</ul>';
+                resultsDiv.innerHTML = message;
+            }
         }
     </script>
 
